Version 6.3
===========
* Added Docking
 - Added CDockFrame
 - Added CDockable
* Added PreTranslateMessage
* Added CWnd::Destroy



Version 6.2
===========

Changes
-------
* The default colour scheme has been changed from blue to grey. 
  The blue, olive and silver colour schemes continue to be used on Windows XP
  with themes enabled. 

New Features
------------
* Frame applications now store the window size and position in the registry.
To enable this, set the m_KeyName member variable in CMainFrame's constructor.
This member variable can be used to reflect the company name and application name,
for example:
  m_KeyName = _T("SomeCompany\\SomeApp");
  
* Frame applications now provide a Most Recently Used (MRU) list. This list is 
stored in the registry.

* Extended CWnd
CWnd now includes functions which wrap many of the Windows API functions that 
affect to windows. 


Version 6.1
===========

New Features
------------
* All Win32++ code has been moved to header files.
This simplifies the use of Win32++. To add Win32++ to a project, simply 
include the appropriate Win32++ header files in your code. There is no longer
any need to add the Win32++ files to the project, although doing so may
still prove useful under some circumstances. Depending on the compiler/IDE
used, adding the Win32++ header files to the project may add the various 
Win32++ classes to the class view.
 
* Added CListView class.
This class encapsulates the various messages and macros used by the Win32/64 
API to manage the List-View common control. You can inherit from this class
when creating your own List-View control in a window, or attaching a 
List-View control from a dialog.

* Added CTreeView class.
This class encapsulates the various messages and macros used by the Win32/64 
API to manage the Tree-View common control. You can inherit from this class
when creating your own Tree-View control in a window, or attaching a 
Tree-View control from a dialog.
