@@ -193,6 +193,15 @@
 				RelativePath="..\Win32++\MDI.h">
 			</File>
 			<File
+				RelativePath="..\Win32++\Rebar.h">
+			</File>
+			<File
+				RelativePath="..\Win32++\Statusbar.h">
+			</File>
+			<File
+				RelativePath="..\Win32++\Toolbar.h">
+			</File>
+			<File
 				RelativePath="..\Win32++\WinCore.h">
 			</File>
 		</Filter>
