@@ -347,6 +347,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Win32++\Rebar.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Win32++\Splitter.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Win32++\Statusbar.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Win32++\WinCore.h"
 				>
 			</File>
